[package]
name = "driploader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
windows = { version = "0.58.0", features = [ "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_Security" ]}
